# axum-firestore-api-example

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: app_state.rs  lib.rs  main.rs
src/controller/: health_check.rs
src/database/: firestore.rs
src/entity/: test.rs  user.rs
src/route/: mod.rs
src/utility/: app_error.rs
