[package]
name = "firebase-auth-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
tokio = { version = "1.25.0", features = ["full"] }
serde = "1.0.152"
serde_json = "1.0.93"
firestore="0.28.0"
dotenv="0.15.0"
chrono="0.4.23"
tower="0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
hyper="0.14.24"
# thiserror="1.0.38"
# anyhow="1.0.69"
